1999-07-03  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* WindowGeometryRecord.m (getVal): Expect a _C_LNG from ArchiverValue.

1999-06-20  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* simtools.tcl (gimme_ddobj): Was `gimme' with an argument.

	* common.m (tkobjc_drag_and_drop_object): Accommodate.

1999-06-08  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* simtools.tcl (do_package, do_package_arg): Eliminate window argument.
	Get this using [winfo parent $token].

	* common.m (oldSetupDragAndDrop, newSetupDragAndDrop): Eliminate
	window argument to do_package.
	(oldSetupDragAndDropArg, newSetupDragAndDropArg): Likewise for
	do_package_arg.

1999-06-06  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.am (noinst_LTLIBRARIES, lib_LTLIBRARIES): Substitute
	{inst,noinst}LIBS. 
	(EXTRA_LTLIBRARIES): New variable.
	(libtkobjc_la_LDFLAGS): Substitute inst_LDFLAGS.

	* Entry.m, Form.m: Include misc.h.

1999-06-05  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Colormap.m ([Colormap -setColor:ToName:]): Don't mark color
	index as set if color lookup fails.

	* Colormap.[hm] ([Colormap -unsetColor:]): New method.
	Thanks to Ken Cline.

1999-05-29  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.am (INCLUDES): Add -I$(top_builddir)/libobjc.

1999-05-28  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* tkobjc.h: Replace with error message.

1999-05-27  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* win32dib.c (dib_snapshot): Select depth from device context
	depth (BITSPIXEL).
	(dib_snapshot): Move plp to function scope; don't free it until
	the end, and only if set.  Make colors by a LPBYTE, not a pointer
	to RGBQUAD.  Get rgb values from logical palette (plp).
	(dib_augmentPalette): Don't use getcolor to set dibInfo->rgb,
	use colormap.

	* internal.m (keep_inside_screen): For Windows, use GetDeviceCaps
	instead of GetWindowRect for determining desktop pixel size.
	(tkobjc_pixmap_save): ncolors <= 256, not < 256.
